peac_dev/force-app/main/default/objects/PEAC_Loan_Application_Stage_Mapping__mdt/PEAC_Loan_Application_Stage_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Created this custom metadata to store mapping of Application Status and Stage with Opportunity Status field.</description>
    <label>Loan Application Stage Mapping</label>
    <pluralLabel>Loan Application Stage Mapping</pluralLabel>
</CustomObject>