peac_dev/force-app/main/default/objects/PEAC_Loan_Application_Stage_Mapping__mdt/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <description>Store opportunity application status</description>
    <inlineHelpText>Enter opportunity application status</inlineHelpText>
    <label>Application Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>