peac_dev/force-app/main/default/objects/PEAC_Loan_Application_Stage_Mapping__mdt/fields/Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status__c</fullName>
    <description>Store Opportunity Status</description>
    <inlineHelpText>Enter opportunity status</inlineHelpText>
    <label>Opportunity Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>