peac_dev/force-app/main/default/objects/PEAC_Loan_Application_Stage_Mapping__mdt/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Store Opportunity stage</description>
    <inlineHelpText>Enter opportunity stage</inlineHelpText>
    <label>Stage</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>